--- a/provision/roles/nginx/templates/site.j2
+++ b/provision/roles/nginx/templates/site.j2
@@ -1,28 +1,28 @@
-upstream {{app_name}} {
-    server unix://{{app_path}}{{app_name}}.sock;
-}
 server {
     listen       80;
     server_name  {{ app_url }};
     charset     utf-8;
     client_max_body_size 75M;
     error_log {{nginx_error_log}};
-    location / {
-        uwsgi_pass  {{app_name}};
-        include     uwsgi_params;
-    }
+
+    root {{app_path}}{{app_name}};
+
+
+    passenger_enabled on;
+
+    passenger_app_type wsgi;
+    passenger_startup_file {{app_name}}/wsgi.py;
+    passenger_group vagrant;
+
     location /static {
-        alias {{app_path}}{{app_name}}/static;
-        expires 365d;
+        passenger_document_root {{app_path}}{{app_name}}/static;
     }
 
     location /media {
-        alias {{app_path}}{{app_name}}/media;
-        expires 365d;
+        passenger_document_root {{app_path}}{{app_name}}/media;
     }
-    location /player/private/media/ {
-       alias {{app_path}}{{app_name}}/media/;
+    
+    location ~* .(jpg|jpeg|png|gif|ico|css|js)$ {
+    expires 365d;
     }
-location /robots.txt { root {{app_path}}{{app_name}}/static/; }
-location /favicon.ico { root {{app_path}}{{app_name}}/static/; }
 }
